tests/snapshots/tests__pre_reduce_run@arithmetic.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: examples/arithmetic.hvmc
---
({3 </ a b> <% c d>} ({5 a c} [b d]))
pre-reduce:
RWTS   :               5
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               5
- OPER :               0
run:
RWTS   :               4
- ANNI :               4
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
