tests/snapshots/tests__pre_reduce_run@chained_ops.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/chained_ops.hvm
---
#7184190578800
pre-reduce:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
run:
RWTS   :              28
- ANNI :               2
- COMM :               4
- ERAS :               0
- DREF :               2
- OPER :              20
