tests/snapshots/tests__pre_reduce_run@chained_ops.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/chained_ops.hvmc
---
#7184190578800
pre-reduce:
RWTS   :               0
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               0
- OPER :               0
run:
RWTS   :              26
- ANNI :               2
- COMM :               4
- ERAS :               0
- DREF :               0
- OPER :              20
