tests/snapshots/tests__pre_reduce_run@dec_bits.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/dec_bits.hvm
---
(* (* (a a)))
pre-reduce:
RWTS   :              99
- ANNI :              32
- COMM :               0
- ERAS :               8
- DREF :              59
- OPER :               0
run:
RWTS   :          71_625
- ANNI :          40_910
- COMM :              11
- ERAS :          20_454
- DREF :          10_250
- OPER :               0
