tests/snapshots/tests__pre_reduce_run@dec_bits.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/dec_bits.hvmc
---
(* (* (a a)))
pre-reduce:
RWTS   :          71_716
- ANNI :          40_942
- COMM :              11
- ERAS :          20_462
- DREF :          10_301
- OPER :               0
run:
RWTS   :               2
- ANNI :               0
- COMM :               0
- ERAS :               0
- DREF :               2
- OPER :               0
